--- a/AS3/requirements.txt
+++ b/AS3/requirements.txt
@@ -1,9 +1,8 @@
 pandas>=1.3.2
 pytrends>=4.7.3
 numpy>=1.19.5
-tensorflow>=2.6.0
 matplotlib>=3.4.3
-sklearn>=0.0
+tensorflow
 scikit-learn>=0.24.2
 tqdm>=4.62.2
 python-binance
@@ -11,3 +10,4 @@ binance-connector
 binance~=0.3
 requests~=2.31.0
 plotly~=5.18.0
+kaleido~=0.2.1
